# MusicSync

./: .flake8  FlacToMp3.py  ImageCover.py  README.md  pyproject.toml  requirements.txt  setup.py
musicsync/: __init__.py  imagecover.py  metadata.py  musicsync.py
